fix: update scrollbar styles and adjust layout in DialogModal component for better responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,14 @@
   @apply backdrop-blur-lg
 }
 
+[data-slot="dialog-content"]::-webkit-scrollbar{
+  @apply bg-transparent hidden;
+}
+
 [data-slot="dialog-content"] button{
   @apply focus:!ring-0 cursor-pointer;
+}
+
+[data-slot="dialog-content"]{
+  @apply p-8 border-neutral-700 border-2;
 }
